--- a/ch2/src/main/webapp/WEB-INF/web.xml
+++ b/ch2/src/main/webapp/WEB-INF/web.xml
@@ -49,5 +49,20 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<!-- 한글 변환 필터 끝 -->
-
+	
+	<!-- session 종료(분) -->
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
+	
+	<!-- 예외발생시 상태코드 및 페이지-->	
+	<error-page>
+		<error-code>400</error-code>
+		<location>/error400.jsp</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error500.jsp</location>
+	</error-page>
 </web-app>
